--- a/teste.html
+++ b/teste.html
@@ -11,7 +11,9 @@
 <body>
     <section id="home" class="home">
         <div id="nav_bar" class="nav_bar">
-            <img src="assets/logo.png" alt="logo" id="logo" class="logo">
+            <div class="logo">
+                <img src="C:\Users\jpmor\OneDrive - SPTech School\Sprint\ProjetoPiKohiQuality\PIQUITURES\1.png" alt="logo" id="logo">
+            </div>
             <ul class="list">
                 <li id="nav_home" class="nav_home"> Home </li>
                 <li id="nav_sobre" class="nav_sobre"> Sobre </li>
@@ -19,7 +21,7 @@
                 <li id="nav_simulador" class="nav_simulador"> Simule </li>
                 <li id="nav_contato" class="nav_contato">Contato</li>
             </ul>
-            <img src="assets/cafeHome.jpg" alt="café">
+            <img src="PIQUITURES\pexels-mo-hassanein-13429428.jpg" alt="café">
         </div>
         <div class="container_reinvente">
             <h1 class="reinvente">REINVENTE O POTENCIAL<br>DO SEU CAFÉ</h1>
